Incorporated comments from review
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>